# SemanticTok

./: .gitignore  README.md  main_diffusion.py  main_evaluation.py  main_reconstruction.py  organize.py  prepare_imagenet.sh  pyproject.toml  requirements.txt  run_eval_diffusion.sh  run_eval_tokenizer.sh  run_evaluation.sh  run_train_diffusion.sh  run_train_ditdh.sh  run_train_tokenizer.sh  upload_to_huggingface.py
exp/: 2nodes_ch768_wokl_lognorm_m-0.10.7random_dinov3_200e_ditddt_xl_800e.sh  2nodes_ch768_wokl_lognorm_m0.00.0fix_dinov2_cls_200e_ditddt_xl_800e.sh  2nodes_ch768_wokl_lognorm_m0.00.0fix_dinov3_200e_ditddt_xl_800e.sh  2nodes_lightningdit_xl_m0.7-dinov2.sh  2nodes_reg0_fix_dinov2_1.0_cls_pooling.sh  2nodes_reg0_fix_dinov2_1.0_cls_pooling_200e.sh  2nodes_reg0_fix_dinov2_1.0_cls_pooling_sit_b.sh  2nodes_reg4_fix_dinov2_0.1_cls.sh  2nodes_reg4_fix_dinov2_0.1_cls_sit_b.sh  2nodes_reg4_fix_dinov2_0.5_cls.sh  2nodes_reg4_fix_dinov2_0.5_cls_sit_b.sh  2nodes_reg4_fix_dinov2_1.0_cls.sh  2nodes_reg4_fix_dinov2_cls.sh  2nodes_reg4_fix_dinov3_1.0_cls.sh  2nodes_reg4_fix_dinov3_cls.sh  2nodes_reg4dec_fix_dinov2_1.0_cls_pooling.sh  2nodes_train_diffusion.sh  2nodes_train_diffusion_lightningdit_xl.sh  4nodes_ch128_512_shift_m-0.10.3random_dinov3_200e_ditddt_xl_80e.sh  4nodes_ch128_512_shift_m-0.10.4random_dinov3_200e_ditddt_xl_80e.sh  4nodes_ch128_512_shift_m-0.10.7random_dinov3_200e_ditddt_xl_80e.sh  4nodes_ch128_512_uniform_m-0.10.5random_dinov3_200e_ditddt_xl_80e.sh  4nodes_ch128_512_uniform_m-0.10.7random_dinov3_200e_ditddt_xl_80e.sh  4nodes_ch128_g1.0shift_m-0.00.0random_dinov3_200e_ditddt_xl_80e_eval.sh  4nodes_ch128_g1.0shift_m-0.10.1random_dinov3_200e_ditddt_xl_80e_eval.sh  4nodes_ch128_g1.0shift_m-0.10.3random_dinov3_200e_ditddt_xl_80e_eval.sh  4nodes_ch128_g1.5uniform_m-0.10.7random_dinov3_200e_ditddt_xl_80e.sh  4nodes_ch128_lognorm_fix_dinov3_cls_200e_ditddt_xl_80e.sh  4nodes_ch128_lognorm_m-0.10.7random_dinov3_200e_ditddt_xl_800e.sh  (+20 more)
linear_probing/: detok.py  detok.sh  (+3 more)
(+46 files in other folders)
